--- a/bookshelf/src/components/TopBar/Topbar.css
+++ b/bookshelf/src/components/TopBar/Topbar.css
@@ -16,7 +16,7 @@
 .componentsWrapper {
     padding-left: 135px;
     position: fixed;
-    width: 15%;
+    width: 24%;
     display: flex;
     justify-content: space-between;
     left: 100px;
@@ -30,8 +30,11 @@
     cursor: pointer;
 }
 .components {
+    padding-top: 9px;
     font-weight: bold;
     font-size: 15px;
+    padding-left: 40px;
+    padding-bottom: 27px;
     color: #ffffff;
     cursor: pointer;
 }
@@ -44,4 +47,44 @@
 .icons:hover {
     background-color: rgb(53, 58, 58);
     cursor: pointer;
+}
+
+.dropdown{
+
+    height:1.9rem;
+}
+
+.dropdown-menu{
+    width: 20rem;
+    text-align: center;
+    color: relative;
+    background-color: #84A98C;
+    position: relative;
+
+}
+.dropdown-list{
+    border-top: solid;
+    text-align: center;
+}
+.dropdown-menu:hover{
+    color: white;
+    /* padding-top: 20px; */
+    background:  #84A98C;
+          
+}
+.components2{
+    padding-top: 9px;
+    padding-left: 50px;
+    font-weight: bold;
+    font-size: 15px;
+    color: #ffffff;
+    cursor: pointer;
+
+}
+
+.items{
+    padding: 15px;
+    font-size: 500;
+    font-weight: 300;
+    font-size: large;
 }
