--- a/bookshelf/src/components/TopBar/Topbar.css
+++ b/bookshelf/src/components/TopBar/Topbar.css
@@ -1,8 +1,8 @@
 .topbar {
     width: 100%;
     height: 75px;
-    background-color: #84A98C;
-    filter: drop-shadow(5px 5px 5px rgba(82, 121, 111, 1));
+    background-color: #7f867b;
+    filter: drop-shadow(5px 5px 5px rgba(100, 105, 97, 1));
     position: fixed;
 }
 
@@ -14,12 +14,12 @@
     justify-content: space-between;
 }
 .componentsWrapper {
-    padding-left: 135px;
     position: fixed;
     width: 24%;
     display: flex;
     justify-content: space-between;
-    left: 100px;
+    left: 200px;
+
 
 
 }
@@ -33,8 +33,8 @@
     padding-top: 9px;
     font-weight: bold;
     font-size: 15px;
-    padding-left: 40px;
-    padding-bottom: 27px;
+    /* padding-left: 70px; */
+    padding-bottom: 10px;
     color: #ffffff;
     cursor: pointer;
 }
@@ -50,15 +50,16 @@
 }
 
 .dropdown{
-
+    
     height:1.9rem;
 }
 
 .dropdown-menu{
+
     width: 20rem;
     text-align: center;
     color: relative;
-    background-color: #84A98C;
+    background-color: #7f867b;
     position: relative;
 
 }
@@ -69,12 +70,12 @@
 .dropdown-menu:hover{
     color: white;
     /* padding-top: 20px; */
-    background:  #84A98C;
+    background:  #7f867b;
           
 }
 .components2{
     padding-top: 9px;
-    padding-left: 50px;
+    /* padding-left: 50px; */
     font-weight: bold;
     font-size: 15px;
     color: #ffffff;
@@ -87,4 +88,29 @@
     font-size: 500;
     font-weight: 300;
     font-size: large;
+}
+.components2 {
+    padding-top: 8px;
+    
+}
+
+.dropdown2{
+
+    height:1.9rem;
+}
+
+
+
+.dropdown-menu2{
+    color: #ffffff;
+    width: 20rem;
+    text-align: center;
+    color: relative;
+    background-color: #7f867b;
+    position: relative;
+
+}
+.dropdown-list2{
+    border-top: solid;
+    text-align: center;
 }
