--- a/bookshelf/src/components/Cart/CartItem.css
+++ b/bookshelf/src/components/Cart/CartItem.css
@@ -44,7 +44,7 @@
     justify-content: center;
     margin: 0px 435px;
     cursor: pointer;
-    background-color: #e3e4e0;
+    background-color: #ffffff;
 
     
 }
@@ -59,7 +59,7 @@
     justify-content: center;
     margin: 20px 435px;
     cursor: pointer;
-    background-color:  #e3e4e0;
+    background-color:  #ffffff;
     
 }
 
