--- a/bookshelf/src/components/TopBar/Topbar.css
+++ b/bookshelf/src/components/TopBar/Topbar.css
@@ -20,9 +20,15 @@
     justify-content: space-between;
     left: 200px;
 
+}
+.componentsWrapper2{
+    /* position: fixed; */
+    width: 350px;
+
 
 
 }
+
 .title {
     font-weight: bold;
     font-size: 25px;
