--- a/bookshelf/src/components/LogIn_Register/Login.css
+++ b/bookshelf/src/components/LogIn_Register/Login.css
@@ -83,6 +83,33 @@
     vertical-align: middle;
     white-space: nowrap;
   }
+
+  .button-3 {
+    margin-bottom: 32%;
+    appearance: none;
+    width: 120px;
+    background-color:  #6e6e6e  ;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
   
   .button-4:focus:not(:focus-visible):not(.focus-visible) {
     box-shadow: none;
