--- a/bookshelf/src/components/LogIn_Register/Register.css
+++ b/bookshelf/src/components/LogIn_Register/Register.css
@@ -20,6 +20,19 @@
     height: 40%;
     text-align: center;
 
+  }
+
+  .cardRegist {
+    /* Add shadows to create the "card" effect */
+    margin-top: 300px;
+    margin-left: 35%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    width: 25%;
+    background-color: #e3e4e0;
+    height: 80%;
+    text-align: center;
 
   }
   
@@ -42,6 +55,8 @@
     -webkit-background-clip: text;
     padding-bottom: 30px;
   }
+
+
   .forms{
     padding:10px;
     width: 70%;
